--- a/time-series-forecast.ipynb
+++ b/time-series-forecast.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Time Series Forecasting in ML.NET\n",
+    "# Time Series Forecasting in ML.NET and Azure ML notebooks\n",
     "\n",
     "In this sample, learn how to run time series forecasting in a Jupyter notebook. We will read in data from a csv file, do some exploratory plots, fit a regression model, and fit a more sophisticated Singular Spectrum Analysis (SSA) \n",
     "\n",
